# 3DRenderer

./: Application.hpp  CMakeLists.txt  Camera.hpp  FrameBuffer.hpp  Interpolator.hpp  LightSource.hpp  Line2D.hpp  Material.hpp  Object3D.hpp  Point2D.hpp  Polygon2D.hpp  Polygon3D.hpp  README.md  Renderer.hpp  Scene.hpp  Texture.hpp  TexturedObject3D.hpp  Triangle2D.hpp  ZBuffer.hpp  auxiliary.hpp
source/: .gitignore  Application.hpp  CMakeLists.txt  Camera.hpp  FrameBuffer.hpp  Interpolator.hpp  LightSource.hpp  Line2D.hpp  Material.hpp  Object3D.hpp  Point2D.hpp  Polygon2D.hpp  Polygon3D.hpp  Renderer.hpp  Scene.hpp  Texture.hpp  TexturedObject3D.hpp  Triangle2D.hpp  ZBuffer.hpp  auxiliary.hpp  build.bat  main.cpp  test.hpp
